--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js",
     "lintfix": "npm run lint:js -- --fix",
-    "test": "jest"
+    "test": "jest",
+    "install": "npm install"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
