Update install command

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,7 +29,7 @@
             "request": "launch",
             "runtimeArgs": [
                 "run-script",
-                "install"
+                "init-client"
             ],
             "runtimeExecutable": "npm",
             "skipFiles": [
