CSV一括登録機能

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,9 @@
       ],
       "@/*": [
         "./*"
+      ],
+      "vuedraggable": [
+        "./types/vuedraggable"
       ]
     },
     "types": [
