--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.15.8"
+    "@nuxt/types": "^2.15.8",
+    "@nuxtjs/tailwindcss": "^5.3.2"
   }
 }
