--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuedraggable": "^2.24.3",
-    "webpack": "^4.46.0",
-    "@nuxtjs/tailwindcss": "^5.3.2"
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.8",
