--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/tailwindcss": "^5.3.2",
     "chart.js": "^3.9.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
@@ -23,7 +24,6 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.15.8",
-    "@nuxtjs/tailwindcss": "^5.3.2"
+    "@nuxt/types": "^2.15.8"
   }
 }
